recursion.lessons.recursion.koch.Koch.scala.error
Koch:20: error: ')' expected but 'return' found.
return(snowSide(levels,length)
^